--- a/src/index.scss
+++ b/src/index.scss
@@ -1,8 +1,10 @@
+@import 'colors';
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: 'Roboto', sans-serif;
-    background: #F9F6E7;
-    color: #39566E;
+    background: $Background;
+    color: $Primary;
 }
