--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,32 @@
+@import "colors";
+
+h1 {
+  margin-top: 50px;
+  margin-bottom: 50px;
+  font-size: 72px;
+  font-weight: 300;
+}
+
 .dog-logo {
-    height: 300px;
-    width: auto;
+  height: 250px;
+  margin-bottom: 50px;
+  width: auto;
+  display: block;
+}
+
+.btn {
+  color: #fff;
+  background: $Secondary;
+  font-size: 36px;
+  width: 300px;
+  height: 90px;
+  padding: 1rem 2rem;
+  border: none;
+  border-radius: 2rem;
+  margin-bottom: 50px;
+}
+
+.dog-image {
+    display: block;
+    margin-bottom: 50px;
 }
