--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,11 @@
 @import "colors";
 
+.wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 h1 {
   margin-top: 50px;
   margin-bottom: 50px;
@@ -10,8 +16,6 @@ h1 {
 .dog-logo {
   height: 250px;
   margin-bottom: 50px;
-  width: auto;
-  display: block;
 }
 
 .btn {
@@ -27,6 +31,5 @@ h1 {
 }
 
 .dog-image {
-    display: block;
-    margin-bottom: 50px;
+  margin-bottom: 50px;
 }
