--- a/src/App.scss
+++ b/src/App.scss
@@ -31,6 +31,12 @@ h1 {
   border: none;
   border-radius: 2rem;
   margin-bottom: 50px;
+  transition: all 0.3s;
+}
+
+.btn:active {
+  background: $Secondary;
+  transform: translateY(4px);
 }
 
 .btn:hover {
