--- a/src/App.scss
+++ b/src/App.scss
@@ -14,11 +14,11 @@ h1 {
 }
 
 .dog-logo {
-  height: 250px;
+  height: 150px;
   margin-bottom: 50px;
   position: absolute;
-  top: 20px;
-  left: 20%;
+  top: 10px;
+  left: 10px;
 }
 
 .btn {
