--- a/src/App.scss
+++ b/src/App.scss
@@ -75,3 +75,36 @@ button:focus {
     margin-bottom: 25px;
   }
 }
+
+@media only screen and (max-width: 374px) {
+  .dog-logo {
+    height: 100px;
+    margin-bottom: 15px;
+    position: inherit;
+    display: block;
+  }
+
+  h1 {
+    margin-top: 15px;
+    margin-bottom: 15px;
+    font-size: 36px;
+  }
+
+  .btn {
+    font-size: 24px;
+    width: 150px;
+    height: 45px;
+    padding: 0.5rem 1rem;
+    border-radius: 1rem;
+    margin-bottom: 25px;
+  }
+}
+
+@media only screen and (min-width: 668px) {
+  .dog-logo {
+    height: 100px;
+    margin-bottom: 15px;
+    position: inherit;
+    display: block;
+  }
+}
