--- a/src/App.scss
+++ b/src/App.scss
@@ -74,6 +74,10 @@ button:focus {
     border-radius: 1rem;
     margin-bottom: 25px;
   }
+
+  .dog-image {
+    max-width: 100vw;
+  }
 }
 
 @media only screen and (max-width: 374px) {
@@ -98,6 +102,10 @@ button:focus {
     border-radius: 1rem;
     margin-bottom: 25px;
   }
+
+  .dog-image {
+    max-width: 100vw;
+  }
 }
 
 @media only screen and (min-width: 668px) {
@@ -106,5 +114,9 @@ button:focus {
     margin-bottom: 15px;
     position: inherit;
     display: block;
+  }
+
+  .dog-image {
+    max-width: 100vw;
   }
 }
