--- a/src/App.scss
+++ b/src/App.scss
@@ -52,7 +52,7 @@ button:focus {
   border-radius: 50px;
 }
 
-@media only screen and (min-width: 375px) and (max-width: 667px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: portrait) {
+@media only screen and (min-width: 375px) and (max-width: 667px) and (-webkit-min-device-pixel-ratio: 2) {
   .dog-logo {
     height: 100px;
     margin-bottom: 15px;
