--- a/src/App.scss
+++ b/src/App.scss
@@ -6,6 +6,12 @@
   align-items: center;
 }
 
+.github-badge-right {
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+
 h1 {
   margin-top: 50px;
   margin-bottom: 50px;
