Add color palette

--- a/src/App.scss
+++ b/src/App.scss
@@ -29,7 +29,7 @@ h1 {
 
 .btn {
   color: #fff;
-  background: $Secondary;
+  background-color: $Secondary;
   font-size: 36px;
   width: 300px;
   height: 90px;
@@ -40,9 +40,39 @@ h1 {
   transition: all 0.3s;
 }
 
+.theme-1 {
+  display: flex;
+  border: 1px solid black;
+  border-radius: 5px;
+  margin-bottom: 1rem;
+
+  .theme-item {
+    height: 20px;
+    width: 20px;
+    background-color: $Primary;
+    border-right: 1px solid black;
+  }
+
+  .theme-item:first-child {
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
+  }
+
+  .theme-item:last-child {
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
+    border-right: 0;
+  }
+
+  .item-1 { background-color: $Primary; }
+  .item-2 { background-color: $Secondary; }
+  .item-3 { background-color: $Background; }
+  .item-4 { background-color: $Other; }
+}
+
 .prev-btn {
   color: #fff;
-  background: $Secondary;
+  background-color: $Secondary;
   font-size: 18px;
   width: 150px;
   height: 45px;
@@ -53,7 +83,7 @@ h1 {
 }
 
 .btn:active {
-  background: $Secondary;
+  background-color: $Secondary;
   transform: translateY(4px);
 }
 
