--- a/src/_colors.scss
+++ b/src/_colors.scss
@@ -2,3 +2,8 @@ $Primary: #39566e;
 $Secondary: #b16889;
 $Background: #f9f6e7;
 $Other: #d5b884;
+
+$Theme2Primary: #18745c;
+$Theme2Secondary: #f8c060;
+$Theme2Background: #f3efe7;
+$Theme2Other: #b59289;
