--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,16 @@
 @import 'colors';
 
+h1 {
+  margin-top: 50px;
+  margin-bottom: 50px;
+  font-size: 72px;
+  font-weight: 300;
+}
+
+button:focus {
+  outline: 0;
+}
+
 .wrapper {
   display: flex;
   flex-direction: column;
@@ -10,13 +21,6 @@
   position: absolute;
   top: 0;
   right: 0;
-}
-
-h1 {
-  margin-top: 50px;
-  margin-bottom: 50px;
-  font-size: 72px;
-  font-weight: 300;
 }
 
 .dog-logo {
@@ -38,6 +42,22 @@ h1 {
   border-radius: 2rem;
   margin-bottom: 1.5rem;
   transition: all 0.3s;
+
+  &.theme2 {
+    background-color: $Theme2Secondary;
+  }
+
+  &:active {
+    background-color: $Secondary;
+    transform: translateY(4px);
+  }
+
+  &:hover {
+    background-color: $Other;
+    &.theme2 {
+      background-color: $Theme2Other;
+    }
+  }
 }
 
 .color-palette {
@@ -115,19 +135,6 @@ h1 {
   border-radius: 2rem;
   margin-bottom: 1rem;
   transition: all 0.3s;
-}
-
-.btn:active {
-  background-color: $Secondary;
-  transform: translateY(4px);
-}
-
-.btn:hover {
-  background-color: $Other;
-}
-
-button:focus {
-  outline: 0;
 }
 
 .dog-image {
