--- a/src/App.scss
+++ b/src/App.scss
@@ -135,6 +135,9 @@ button:focus {
   border-radius: 2rem;
   margin-bottom: 1rem;
   transition: all 0.3s;
+  &.theme2 {
+    background-color: $Theme2Secondary;
+  }
 }
 
 .dog-image {
