--- a/src/App.scss
+++ b/src/App.scss
@@ -17,7 +17,7 @@ button:focus {
   align-items: center;
 }
 
-.github-badge-right {
+.github-badge {
   position: absolute;
   top: 0;
   right: 0;
@@ -176,7 +176,7 @@ button:focus {
     max-width: 100vw;
   }
 
-  .github-badge-right {
+  .github-badge {
     width: 15vw;
   }
 }
@@ -189,7 +189,7 @@ button:focus {
     display: block;
   }
 
-  .github-badge-right {
+  .github-badge {
     width: 10vw;
   }
 
