Fix prev btn default theme hover color

--- a/src/App.scss
+++ b/src/App.scss
@@ -92,7 +92,7 @@ button:focus {
   }
 
   &:hover {
-    background-color: $Theme2Other;
+    background-color: $Other;
     &.theme2 {
       background-color: $Theme2Other;
     }
