--- a/src/_colors.scss
+++ b/src/_colors.scss
@@ -1,7 +1,7 @@
-$Primary: #39566e;
-$Secondary: #b16889;
-$Background: #f9f6e7;
-$Other: #d5b884;
+$Theme1Primary: #39566e;
+$Theme1Secondary: #b16889;
+$Theme1Background: #f9f6e7;
+$Theme1Other: #d5b884;
 
 $Theme2Primary: #18745c;
 $Theme2Secondary: #f8c060;
