--- a/src/App.scss
+++ b/src/App.scss
@@ -210,6 +210,50 @@ button:focus {
     width: 15vw;
     height: auto;
   }
+
+  .color-palette {
+    top:  80px;
+  }
+
+  .theme-1 {
+    border-radius: 2px;
+    margin-bottom: 0.5rem;
+    .theme-item {
+      height: 10px;
+      width: 10px;
+    }
+
+    .theme-item:first-child {
+      border-top-left-radius: 2px;
+      border-bottom-left-radius: 2px;
+    }
+
+    .theme-item:last-child {
+      border-top-right-radius: 2px;
+      border-bottom-right-radius: 2px;
+      border-right: 0;
+    }
+  }
+
+  .theme-2 {
+    border-radius: 2px;
+    margin-bottom: 0.5rem;
+    .theme-item {
+      height: 10px;
+      width: 10px;
+    }
+
+    .theme-item:first-child {
+      border-top-left-radius: 2px;
+      border-bottom-left-radius: 2px;
+    }
+
+    .theme-item:last-child {
+      border-top-right-radius: 2px;
+      border-bottom-right-radius: 2px;
+      border-right: 0;
+    }
+  }
 }
 
 @media only screen and (max-width: 374px) {
@@ -242,5 +286,9 @@ button:focus {
 
   .dog-image {
     max-width: 100vw;
+  }
+
+  .color-palette {
+    top:  50px;
   }
 }
